@@ -1,3 +1,7 @@
+Thu Feb  5 03:59:33 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* vm_insnhelper.c: Fix symbol leak with +send+ [Bug #10828]
+
 Wed Feb  4 20:26:54 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>
 
 	* ext/win32ole/win32ole.c (Init_win32ole): should not use atexit to
